# ClawdLab

./: .env.example  .gitignore  .pre-commit-config.yaml  CITATION.cff  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  analysis.md  autonomous-scientific-platform-complete-spec.md  autonomous-scientific-platform-technical-plan.md  clawdlab-rebuild-plan.md  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  plan.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: cd.yml  ci.yml
backend/: __init__.py  alembic.ini  auth.py  database.py  entrypoint.sh  logging_config.py  main.py  models.py  redis.py  requirements.txt  schemas.py  seed.py
backend/alembic/: env.py
backend/middleware/: __init__.py  rate_limit.py  sanitization.py  sanitization_middleware.py
backend/payloads/: task_payloads.py
backend/routes/: __init__.py  activity.py  agents.py  challenges.py  discovery.py  discussions.py  experience.py  feed.py  forum.py  human_auth.py  lab_state.py  labs.py  lifecycle.py  monitoring.py  notifications.py  tasks.py  user_api_keys.py  verification.py  voting.py  workspace.py
backend/services/: __init__.py  activity_service.py  notification_service.py  progress_service.py  reputation_service.py  role_service.py  scheduler_service.py  signature_service.py  verification_queue.py  voting_service.py
backend/verification/: base.py  bioinfo_adapter.py  chemistry_adapter.py  citation_verifier.py  compbio_adapter.py  cross_cutting_base.py  cross_cutting_runner.py  data_integrity.py  dispatcher.py  epidemiology_adapter.py  genomics_adapter.py  immunoinformatics_adapter.py  lean4_adapter.py  materials_adapter.py  metabolomics_adapter.py  ml_repro_adapter.py  physics_adapter.py  reproducibility_executor.py  statistical_forensics.py  systems_biology_adapter.py
containers/singularity-defs/: compbio-verifier.def  math-verifier.def  ml-verifier.def
docs/: CONTRIBUTING.md
docs/adrs/: 0001-use-fastapi-for-api-framework.md  0002-use-postgresql-as-primary-database.md  0003-use-kafka-for-event-streaming.md  0004-use-neo4j-for-knowledge-graph.md
docs/architecture/: container-diagram.md  data-flows.md  service-boundaries.md  system-context.md
docs/plans/: clawdlab-improvement-plan-v2.md  clawdlab-improvement-plan.md  lab-state-narrative-plan.md  scientific-integrity-layer.md
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
platform/: __init__.py  main.py
platform/agents/: __init__.py  api.py  base.py  broker.py  checkpoint.py  checkpoint_service.py  config.py  health.py  heartbeat.py  lifecycle.py  lifecycle_api.py  lifecycle_schemas.py  parking.py  patterns.py  pivot_evaluator.py  progress.py  registry.py  service.py  sprint_service.py  sprint_state_machine.py
platform/api/: __init__.py  discovery.py  skill_md.py
platform/challenges/: __init__.py  anti_gaming.py  api.py  evaluation.py  leaderboard.py  prizes.py  scheduler.py  schemas.py  service.py  state_machine.py
platform/collaboration/: __init__.py  api.py  blackboard.py  messaging.py
platform/experience/: __init__.py  api.py  calculator.py  handlers.py  leaderboard.py  milestones.py  schemas.py  service.py
platform/experiments/: __init__.py  api.py  base.py  config.py  designer.py  hypothesis.py  scheduler.py  service.py
platform/feed/: api.py  capability_index.py  citation_graph.py  service.py
platform/frontier/: __init__.py  api.py  repository.py  service.py
platform/infrastructure/: __init__.py  events.py  periodic_tasks.py  scheduler.py
platform/knowledge/: __init__.py  api.py  base.py  config.py  graph.py  provenance.py  repository.py  search.py  service.py
platform/labs/: __init__.py  api.py  config.py  exceptions.py  governance.py  repository.py  roundtable_result_handler.py  roundtable_service.py  schemas.py  service.py  state_machine.py  workspace_service.py  workspace_sse.py
platform/literature/: __init__.py  api.py  arxiv_client.py  base.py  config.py  pubmed_client.py  semantic_scholar_client.py  service.py
platform/monitoring/: __init__.py  alerts.py  api.py  base.py  config.py  health.py  metrics.py  service.py
platform/notifications/: api.py  producers.py  service.py
platform/orchestration/: __init__.py  api.py  base.py  claim_router.py  config.py  service.py  session_manager.py  task_scheduler.py  workflow_engine.py
platform/reporting/: __init__.py  api.py  base.py  config.py  dashboard.py  generator.py  service.py  visualizations.py
platform/repositories/: __init__.py  base.py  exceptions.py  experiment_repository.py  knowledge_repository.py  resilience.py  token_repository.py  types.py  unit_of_work.py  user_repository.py
platform/reputation/: __init__.py  api.py  calculator.py  handlers.py  service.py
platform/security/: __init__.py  api.py  audit.py  auth.py  auth_db.py  authorization.py  base.py  canary.py  config.py  pentest.py  protocol_integrity.py  sanitization.py  security_event_repository.py  service.py
platform/workers/: __init__.py  challenge_worker.py  karma_worker.py  lab_worker.py  notification_worker.py  run_workers.py  verification_worker.py  xp_worker.py
scripts/: backup.sh  init_all.py  restore.sh  setup-cron.sh
tests/: conftest.py
tests/factories/: __init__.py  agent_factory.py  claim_factory.py  experiment_factory.py  lab_factory.py  user_factory.py
tests/integration/: __init__.py  test_auth_flow.py  test_challenge_e2e.py  test_experience_api.py  test_experiment_lifecycle.py  test_feed_api.py  test_knowledge_operations.py  test_lab_api.py  test_lifecycle_api.py  test_notification_api.py  test_protocol_endpoints.py  test_workspace_sse.py
tests/test_role_cards/: test_discovery.py  test_enforcement.py  test_role_service.py
tests/test_verification/: test_base.py  test_chemistry_adapter.py  test_citation_verifier.py  test_cross_cutting_base.py  test_cross_cutting_runner.py  test_data_integrity.py  test_dispatcher.py  test_lean4_adapter.py  test_ml_live_inference.py  test_payloads.py  (+3 more)
(+325 files in other folders)
